interpreter/lox.grammar
expression      ->      equality
equality        ->      comparison ( ( "!=" | "==" ) comparison )* ;
comparison      ->      term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term            ->      factor ( ( "-" | "+" ) factor)* ;
factor          ->      unary ( ( "/" | "*" ) unary )* ;
unary           ->      ( "!" | "-" ) unary
                        | primary ;
primary         ->      NUMBER | STRING | "true" | "false" | "nil"
                        | "(" expression ")" ;

program         ->      statement* EOF ;
statement       ->      exprStatement
                        | printStatement ;
exprStatement   ->      expression ";" ;
printStatement  ->      "print" expression ";" ;
